--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Algorithm_Interview2)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp "283. Move Zeroes.h" "27. Remove Element.h" "26. Remove Duplicates from Sorted Array.h" "80. Remove Duplicates from Sorted Array II.h" "75. Sort Colors.h")
+set(SOURCE_FILES main.cpp "283. Move Zeroes.h" "27. Remove Element.h" "26. Remove Duplicates from Sorted Array.h" "80. Remove Duplicates from Sorted Array II.h" "75. Sort Colors.h" "88. Merge Sorted Array.h" "215. Kth Largest Element in an Array.h")
 add_executable(Algorithm_Interview2 ${SOURCE_FILES})
